--- a/Source/PascalPrimer.dproj
+++ b/Source/PascalPrimer.dproj
@@ -5,7 +5,7 @@
 			<FrameworkType>VCL</FrameworkType>
 			<MainSource>PascalPrimer.dpr</MainSource>
 			<Base>True</Base>
-			<Config Condition="'$(Config)'==''">Release</Config>
+			<Config Condition="'$(Config)'==''">Debug</Config>
 			<Platform Condition="'$(Platform)'==''">Win32</Platform>
 			<TargetedPlatforms>3</TargetedPlatforms>
 			<AppType>Application</AppType>
@@ -157,6 +157,12 @@
 				<Form>FormAbout</Form>
 				<FormType>dfm</FormType>
 			</DCCReference>
+			<DCCReference Include="PascalPrimer.Shared.pas">
+				<Form>DataModuleShared</Form>
+				<FormType>dfm</FormType>
+				<DesignClass>TDataModule</DesignClass>
+			</DCCReference>
+			<DCCReference Include="PascalPrimer.Statistics.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
