--- a/Source/PascalPrimer.dproj
+++ b/Source/PascalPrimer.dproj
@@ -120,9 +120,6 @@
 			<VerInfo_Locale>1033</VerInfo_Locale>
 			<DCC_RemoteDebug>false</DCC_RemoteDebug>
 		</PropertyGroup>
-		<PropertyGroup Condition="'$(Cfg_3)'!=''">
-			<DCC_Define>FullDebugMode;$(DCC_Define)</DCC_Define>
-		</PropertyGroup>
 		<PropertyGroup Condition="'$(Cfg_3_Win64)'!=''">
 			<VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
 			<VerInfo_Locale>1033</VerInfo_Locale>
@@ -163,6 +160,10 @@
 				<DesignClass>TDataModule</DesignClass>
 			</DCCReference>
 			<DCCReference Include="PascalPrimer.Statistics.pas"/>
+			<DCCReference Include="PascalPrimer.EmbedResources.pas"/>
+			<RcCompile Include="PascalPrimer.Standalone.rc">
+				<Form>PascalPrimer.Standalone.res</Form>
+			</RcCompile>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
