--- a/Source/Standalone.dproj
+++ b/Source/Standalone.dproj
@@ -67,6 +67,8 @@
 			<DCC_Optimize>false</DCC_Optimize>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
+			<Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
+			<Icon_MainIcon>..\Glyphs\PascalPrimer.ico</Icon_MainIcon>
 			<VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
 			<VerInfo_Locale>1033</VerInfo_Locale>
 		</PropertyGroup>
@@ -80,6 +82,9 @@
 			<DCCReference Include="PascalPrimer.Standalone.pas">
 				<Form>FormStandalone</Form>
 			</DCCReference>
+			<RcCompile Include="PascalPrimer.Static.rc">
+				<Form>PascalPrimer.Static.res</Form>
+			</RcCompile>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
